--- a/assets/style.css
+++ b/assets/style.css
@@ -23,7 +23,7 @@ body {
 	right: 0;
 	left: 0;
 	bottom: 0;
-	background:linear-gradient( #31508c, #71affe, #71affe,#71affe) ;
+	background:linear-gradient( #31508c, #71afff, #71affe,#71affe) ;
 }
 
 .comet__body{
